# a2p.myproject

./: pyproject.toml
src/my_project/: __init__.py  __main__.py  task_manager.py
